--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,24 @@
-<p>header works!</p>
+<div id="header">
+    <div class="container-fluid">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light">   
+        
+  
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" [routerLink]="['home']">Trang chủ </a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" [routerLink]="['create-event']">create-event</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" [routerLink]="['view-event']">view-event </a>
+            </ul>
+            
+          </div>
+        </nav>
+      </div>
+    </div>
+  </div>
+  
