--- a/src/app/components/view-event/view-event.component.html
+++ b/src/app/components/view-event/view-event.component.html
@@ -1,1 +1,3 @@
-<p>view-event works!</p>
+<div id="wrapper">
+    <div [innerHTML]="evContent" class="container" style="margin-top:100px"></div>
+</div>
