--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,12 @@
+<style>
+   .col-4{
+      margin-top: 20px;
+   }
+</style>
+<app-header></app-header>
 <div class="container">
    <div class="row">
-      <div class="col">
+      <div class="col-4">
          <div class="card" style="width: 18rem;" style="padding:10px;">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRvKWA6GzeJed4pt4FvvL9FIW2giyzhCXpGv46TGBxGzForlzM6&usqp=CAU" class="card-img-top" alt="..." style="height: 250px;">
             <div class="card-body">
@@ -10,7 +16,7 @@
             </div>
           </div>
       </div>
-      <div class="col">
+      <div class="col-4">
          <div class="card" style="width: 18rem;" style="padding:10px;">
             <img src="https://file1.hutech.edu.vn/file/editor/homepage1/0.Banner%20h%E1%BB%99i%20th%E1%BA%A3o.png" class="card-img-top" alt="..." style="height: 250px;">
             <div class="card-body">
@@ -20,7 +26,7 @@
             </div>
           </div>
       </div>    
-      <div class="col">
+      <div class="col-4">
          <div class="card" style="width: 18rem;" style="padding:10px;">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQYCv8gIMw8MDT1_ppM0ejvZegSuGLaLnLQK_APpRye1DVQG34d&usqp=CAU" class="card-img-top" alt="..." style="height: 250px;">
             <div class="card-body">
@@ -30,7 +36,7 @@
             </div>
           </div>
       </div>    
-      <div class="col">
+      <div class="col-4">
          <div class="card" style="width: 18rem;" style="padding:10px;">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTjvxka3nRJlUMNhL35iHep0Vaeeq8aejxFXmAqcIWqzX07QJ3Z&usqp=CAU" class="card-img-top" alt="..." style="height: 250px;">
             <div class="card-body">
