--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
-<div class="container" style="margin-top: 100px;">
+<app-header></app-header>
+<div class="container">
    
    <table class="table table-hover">
       <thead class="thead-dark">
