--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -69,7 +69,7 @@ ul{list-style:none;margin:0;padding:0;}
               <ul class="main-menu">
                   <li class="menu-item">
                       <a href="./home" title="Homes">
-                          <span>Trang Chủ</span>
+                          <span>Tất cả sự kiện</span>
                       </a>
                   </li>
                   <li class="menu-item">
@@ -77,12 +77,6 @@ ul{list-style:none;margin:0;padding:0;}
                           <span>Tạo Sự Kiện</span>
                       </a>
                   </li>
-                  <li class="menu-item">
-                      <a href="./view-event" title="Features">
-                          <span>Xem Sự Kiện</span>
-                      </a>
-                  </li>
-            
               </ul>
           </div>
       </div>
