--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,7 +8,7 @@
             <div  class="card-body">
               <h5 class="card-title">{{evt.evTitle}}</h5>
               <p class="card-text">{{evt.evDescription}}</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="/view-event{{evt.evUrl}}" class="btn btn-primary">Xem sự kiện</a>
             </div>
           </div>
       </div>      
